Bug 159707 - CRASH: Changing to edit mode
Summary: CRASH: Changing to edit mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: highest critical
Assignee: Julien Nabet
URL:
Whiteboard: target:24.8.0 target:24.2.1.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-02-13 11:46 UTC by Xisco Faulí
Modified: 2024-02-28 15:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["ScVbaEventsHelper::notifyEvent(com::sun::star::document::EventObject%20const%20&)"]


Attachments
bt (12.08 KB, text/plain)
2024-02-13 22:29 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-02-13 11:46:54 UTC
Steps to reproduce:
1. Open attachment 114398 [details] from bug 90278
2. Edit - Edit mode

-> Crash

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 181f4c5ac9834c15fe0acc4b6e92f064e95ab32c
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-02-13 11:47:54 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2023-10-26 13:36:46 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-10-26 19:02:53 +0200
commit d2fccf0117a37f8aab8bb50ece419987f06af6b9 (patch)
tree 5949fc5e4d130d91916400240ab519617c7fce4d
parent 96b91357fb93028d35d70bdb52b4bac3ecbfbf57 (diff)
cool#6893 improve listeners in SfxBaseModel

Bisected with: bibisect-linux64-24.2
Comment 2 Julien Nabet 2024-02-13 22:29:46 UTC
Created attachment 192546 [details]
bt

On pc Debian x86-64 with master sources updated today, I had an assertion.
Comment 3 Julien Nabet 2024-02-14 09:23:39 UTC
https://gerrit.libreoffice.org/c/core/+/163356
Comment 4 Commit Notification 2024-02-14 13:19:53 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7c0c8a3ae258808012c3514dadeb02fc0c6fc43b

tdf#159707: fix crash when changing to edit mode (calc)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2024-02-14 13:39:09 UTC
Thank you Xisco for the cherry-picks! :-)
Comment 6 Commit Notification 2024-02-14 16:38:16 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/39fa034db32fa07a7f2a7afe77f7d1c047b5cad8

tdf#159707: fix crash when changing to edit mode (calc)

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-02-15 07:57:40 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fc1e5bf5c1c75acd6bb8f62b9363aa1a30b9acd6

tdf#159707: sc: Add UItest

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-02-25 13:31:54 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-1":

https://git.libreoffice.org/core/commit/6d69bfd42eb5ecb06a0a2b4dec8819fb6d1561f2

tdf#159707: fix crash when changing to edit mode (calc)

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.