tdf#159707: fix crash when changing to edit mode (calc)

bt:
0x00007f9eb4b902f2 in com::sun::star::uno::Reference<com::sun::star::frame::XModel>::operator->() const (this=0x55b8c2b54888) at include/com/sun/star/uno/Reference.h:387
0x00007f9eb4c03584 in ScVbaEventsHelper::notifyEvent(com::sun::star::document::EventObject const&) (this=0x55b8c2b54840, rEvent=...) at /home/julien/lo/libreoffice/sc/source/ui/vba/vbaeventshelper.cxx:605
0x00007f9ef464bd3c in (anonymous namespace)::NotifySingleListenerIgnoreRE<com::sun::star::document::XEventListener, com::sun::star::document::EventObject>::operator()(com::sun::star::uno::Reference<com::sun::star::document::XEventListener> const&) const (this=0x7ffc5044dfc0, listener=uno::Reference to (ScVbaEventsHelper *) 0x55b8c2b54870) at /home/julien/lo/libreoffice/sfx2/source/doc/sfxbasemodel.cxx:3293
0x00007f9ef463b8aa in comphelper::OInterfaceContainerHelper3<com::sun::star::document::XEventListener>::forEach<(anonymous namespace)::NotifySingleListenerIgnoreRE<com::sun::star::document::XEventListener, com::sun::star::document::EventObject> >((anonymous namespace)::NotifySingleListenerIgnoreRE<com::sun::star::document::XEventListener, com::sun::star::document::EventObject> const&)
(this=0x55b8c2735c18, func=...) at include/comphelper/interfacecontainer3.hxx:279
0x00007f9ef463b010 in SfxBaseModel::postEvent_Impl(rtl::OUString const&, com::sun::star::uno::Reference<com::sun::star::frame::XController2> const&, com::sun::star::uno::Any const&)
(this=0x55b8c2308ae0, aName="OnUnload", xController=empty uno::Reference, supplement=uno::Any(void)) at /home/julien/lo/libreoffice/sfx2/source/doc/sfxbasemodel.cxx:3338
0x00007f9ef463a089 in SfxBaseModel::Notify(SfxBroadcaster&, SfxHint const&) (this=0x55b8c2308ae0, rBC=..., rHint=...) at /home/julien/lo/libreoffice/sfx2/source/doc/sfxbasemodel.cxx:2960

See full bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=192546

Regression from:
https://git.libreoffice.org/core/+/d2fccf0117a37f8aab8bb50ece419987f06af6b9%5E%21
"cool#6893 improve listeners in SfxBaseModel"

Change-Id: I372808dade20c47275ab599054d8e9572dc3da4d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163356
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 6c6b580428bc527da9af82da743616787617b39b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163344
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>